# mosaicraft

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  ai.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  robots.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: benchmark_pipeline.py  compare_tools.py
docs/assets/: MANIFEST.json
examples/: basic.py  color_variants.py  custom_preset.py  recolor_gallery.py  with_cache.py
scripts/: download_demo_assets.py  generate_demo_target.py  generate_demo_tiles.py  generate_readme_figures.py  generate_recolor_region_demo.py
src/mosaicraft/: __init__.py  __main__.py  blending.py  cli.py  color.py  color_augment.py  core.py  features.py  placement.py  postprocess.py  presets.py  recolor.py  saliency.py  tiles.py  utils.py
tests/: conftest.py  test_cli.py  test_color.py  test_color_augment.py  test_features.py  test_placement.py  test_postprocess.py  test_recolor.py  test_smoke.py  test_tiles.py
